# codex-python-engineering-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SOURCES.md  SUPPORT.md  VALIDATION.md  bootstrap.py  parity-exceptions.json  parity-manifest.json  pyproject.toml
.agents/plugins/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: harness-quality.yml  loop-self-evaluation.yml
docs/: ARCHITECTURE.md  ENTERPRISE_ROLLOUT.md  ENTERPRISE_ROLLOUT.pt-BR.md  EVALUATION.md  LOOPS.md  LOOPS.pt-BR.md  UPGRADING.md  UPGRADING.pt-BR.md  VERSIONING.md
governance/: README.md
governance/catalog/: controls.json
governance/overlays/: dora.json  iso-iec-42001.json  nist-sp-800-53.json
governance/profiles/: agentic.json  ai-assisted.json  baseline.json  none.json
governance/schemas/: control-catalog.schema.json  exceptions.schema.json  governance-profile.schema.json  risk-register.schema.json
plugins/python-engineering-harness/.codex-plugin/: plugin.json
plugins/python-engineering-harness/hooks/: hooks.json
plugins/python-engineering-harness/scripts/: format_python.py  guard_mcp.py  protect_sensitive_files.py
plugins/python-engineering-harness/skills/configure-mcp/: SKILL.md
plugins/python-engineering-harness/skills/create-adr/: SKILL.md
plugins/python-engineering-harness/skills/debug-failure/: SKILL.md
plugins/python-engineering-harness/skills/implement-change/: SKILL.md
plugins/python-engineering-harness/skills/review-change/: SKILL.md
profiles/workspace/: AGENTS.md  README.md  pyproject.toml
profiles/workspace/.github/workflows/: quality.yml
profiles/workspace/docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: loop_self_evaluation.py  parity_check.py  quality_gate.py
template/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
template/.agents/skills/plan-change/: SKILL.md
template/.agents/skills/prepare-pr/: SKILL.md
template/.agents/skills/quality-gate/: SKILL.md
template/.agents/skills/review-mcp/: SKILL.md
template/.agents/skills/scaffold-use-case/: SKILL.md
template/.agents/skills/security-review/: SKILL.md
template/.codex/: config.toml  hooks.json
template/.codex/hooks/: _common.py  scan_secrets.py  scan_worktree.py  sensitive_patterns.py  validate_bash.py
template/.github/workflows/: quality.yml
template/docs/: ARCHITECTURE.md  DEVELOPMENT.md  LLM_OBSERVABILITY.md  MCP.md  PRIVACY.md
template/docs/mcp/: project-config.example.toml
template/governance/: README.md  exceptions.json  scope.json
template/governance/assessments/: ai-impact-assessment.md  provider-exit-strategy.md  resilience-test-plan.md
template/governance/inventories/: agents.json  ai-systems.json  mcp-servers.json  third-parties.json  tools.json
template/governance/risks/: risk-register.json
template/scripts/: quality_gate.py  validate_mcp_config.py
template/scripts/_vendor_loop_schemas/: __init__.py  models.py  validate_contract.py
template/tests/unit/: test_logging.py  test_observability.py  test_package.py  test_tracing.py
tests/: __init__.py  test_harness.py  test_loop_schema_vendor.py
(+2 files in other folders)
